--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <iframe src="./index.html" frameborder="1" height="640vh" width="20%"  class="clickingimage"></iframe>
-    <iframe src="./good/index.html" frameborder="1" height="640vh" width="79%" class="page" name="web-page"></iframe>
+    <iframe src="./resume.html" frameborder="1" height="640vh" width="79%" class="page" name="web-page"></iframe>
 </head>
 <body>
     
