--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <p>Project 1-Resume</p>
 <hr>
-<a href="./good/index.html" target="web-page"><img src="./Screenshot 2024-09-06 204846.png" alt="Resume" width="100%"></a>
+<a href="./resume.html" target="web-page"><img src="./Screenshot 2024-09-06 204846.png" alt="Resume" width="100%"></a>
 <hr><br>
 <p>Project 2 -Photo Cat App</p>
 <hr>
